--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 # Mysql
-DB_HOST = localhost
+DB_HOST = maglev.proxy.rlwy.net
 DB_USER = root
-DB_PASSWORD = root123@
+DB_PASSWORD = bLbOyfcQkxXnBkRGaFugiHaTNdiZpacw
 DB_DATABASE = clother_kid
-DB_PORT = 3306
+DB_PORT = 52818
 
 #App
 PORT = 8081
