--- a/backend/.env
+++ b/backend/.env
@@ -7,6 +7,6 @@ DB_PORT = 52818
 
 #App
 PORT = 8081
-URL_FRONTEND = t-shop-beige.vercel.app
+URL_FRONTEND = https://t-shop-beige.vercel.app
 #URL_FRONTEND = http://localhost:3000
 JWT_SECRET = cyxh7%rBzRd8y&4RZ1QxDqgA27AqrNh6+mZ_7-++eG$kC4e3!KbLbOyfcQkxXnBkRGaefFugiHaTNdiZpadwedcwHEj%$^
